Upgrade gradle to version 7.2